Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106472

macOS: Crash at exit on if QPixmap was copied to the clipboard

XMLWordPrintable

    • macOS
    • 20d7d41a74 (qt/qtbase/dev) 20d7d41a74 (qt/tqtc-qtbase/dev)

      Attached is imageviewer example with modified copy() to copy a QPixmap of the image to clipboard. On exit, this can happen:

      #3 0x0000000105e9cafc in qAbort() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/global/qglobal.cpp:3397
      
      #4 0x0000000105ea7080 in qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&) at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/global/qlogging.cpp:1878
      
      #5 0x0000000106361dd0 in QMessageLogger::fatal(char const*, ...) const at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/global/qlogging.cpp:881
      
      #6 0x00000001058291b8 in qt_pixmap_thread_test() at /Users/user/Qt/6.3.0_src/qtbase/src/gui/image/qpixmap.cpp:83
      
      #7 0x00000001058299d8 in QPixmap::QPixmap(QPixmap const&) at /Users/user/Qt/6.3.0_src/qtbase/src/gui/image/qpixmap.cpp:217
      
      #8 0x0000000105829bdc in QPixmap::QPixmap(QPixmap const&) at /Users/user/Qt/6.3.0_src/qtbase/src/gui/image/qpixmap.cpp:216
      
      #9 0x0000000105849324 in QtPrivate::QMetaTypeForType<QPixmap>::getCopyCtr()::'lambda'(QtPrivate::QMetaTypeInterface const*, void*, void const*)::operator()(QtPrivate::QMetaTypeInterface const*, void*, void const*) const at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qmetatype.h:2313
      
      #10 0x00000001058491a4 in QtPrivate::QMetaTypeForType<QPixmap>::getCopyCtr()::'lambda'(QtPrivate::QMetaTypeInterface const*, void*, void const*)::__invoke(QtPrivate::QMetaTypeInterface const*, void*, void const*) at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qmetatype.h:2312
      
      #11 0x0000000105fe02b8 in QVariant::QVariant(QVariant const&) at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qvariant.cpp:536
      
      #12 0x0000000105fe0324 in QVariant::QVariant(QVariant const&) at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qvariant.cpp:527
      
      #13 0x0000000105fa3eec in QMimeDataPrivate::getData(QString const&) const at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qmimedata.cpp:110
      
      #14 0x0000000105fa6728 in QMimeData::retrieveData(QString const&, QMetaType) const at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qmimedata.cpp:669
      
      #15 0x0000000104fdc09c in QMacMimeData::variantData(QString const&) at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qmacclipboard.mm:82
      
      #16 0x0000000104fdca18 in QMacPasteboard::promiseKeeper(OpaquePasteboardRef*, void*, __CFString const*, void*) at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qmacclipboard.mm:207
      
      #17 0x000000019ca62cec in PasteboardCopyDataProc(void*, __CFPasteboard*, long, long, __CFString const*) ()
      
      #18 0x000000019ca6331c in ResolveClientPromiseCache(OpaquePasteboardRef*, bool) ()
      
      #19 0x000000019ca6324c in PasteboardResolvePromises ()
      
      #20 0x0000000104fdceb8 in QMacPasteboard::~QMacPasteboard() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qmacclipboard.mm:144
      
      #21 0x0000000104fdcf40 in QMacPasteboard::~QMacPasteboard() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qmacclipboard.mm:137
      
      #22 0x0000000104f6c3b0 in QScopedPointerDeleter<QMacPasteboard>::cleanup(QMacPasteboard*) at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/tools/qscopedpointer.h:60
      
      #23 0x0000000104f6c37c in QScopedPointer<QMacPasteboard, QScopedPointerDeleter<QMacPasteboard> >::~QScopedPointer() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/tools/qscopedpointer.h:116
      
      #24 0x0000000104f6ba28 in QScopedPointer<QMacPasteboard, QScopedPointerDeleter<QMacPasteboard> >::~QScopedPointer() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/tools/qscopedpointer.h:114
      
      #25 0x0000000104f6c310 in QCocoaClipboard::~QCocoaClipboard() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qcocoaclipboard.h:52
      
      #26 0x0000000104f6befc in QCocoaClipboard::~QCocoaClipboard() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qcocoaclipboard.h:52
      
      #27 0x0000000104f6bf28 in QCocoaClipboard::~QCocoaClipboard() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qcocoaclipboard.h:52
      
      #28 0x0000000104f89af8 in QCocoaIntegration::~QCocoaIntegration() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qcocoaintegration.mm:234
      
      #29 0x0000000104f89ce4 in QCocoaIntegration::~QCocoaIntegration() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qcocoaintegration.mm:216
      
      #30 0x0000000104f89d48 in QCocoaIntegration::~QCocoaIntegration() at /Users/user/Qt/6.3.0_src/qtbase/src/plugins/platforms/cocoa/qcocoaintegration.mm:216
      
      #31 0x00000001058633e8 in QGuiApplicationPrivate::~QGuiApplicationPrivate() at /Users/user/Qt/6.3.0_src/qtbase/src/gui/kernel/qguiapplication.cpp:1724
      
      #32 0x00000001051dd32c in QApplicationPrivate::~QApplicationPrivate() at /Users/user/Qt/6.3.0_src/qtbase/src/widgets/kernel/qapplication.cpp:165
      
      #33 0x00000001051dd3b0 in QApplicationPrivate::~QApplicationPrivate() at /Users/user/Qt/6.3.0_src/qtbase/src/widgets/kernel/qapplication.cpp:162
      
      #34 0x00000001051dd3dc in QApplicationPrivate::~QApplicationPrivate() at /Users/user/Qt/6.3.0_src/qtbase/src/widgets/kernel/qapplication.cpp:162
      
      #35 0x0000000105fc40e4 in QScopedPointerDeleter<QObjectData>::cleanup(QObjectData*) at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/tools/qscopedpointer.h:60
      
      #36 0x0000000105fc40a8 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::~QScopedPointer() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/tools/qscopedpointer.h:116
      
      #37 0x0000000105fac6a0 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::~QScopedPointer() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/tools/qscopedpointer.h:114
      
      #38 0x0000000105facd7c in QObject::~QObject() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qobject.cpp:1114
      
      #39 0x0000000105f43d5c in QCoreApplication::~QCoreApplication() at /Users/user/Qt/6.3.0_src/qtbase/src/corelib/kernel/qcoreapplication.cpp:920
      
      #40 0x000000010585f580 in QGuiApplication::~QGuiApplication() at /Users/user/Qt/6.3.0_src/qtbase/src/gui/kernel/qguiapplication.cpp:717
      
      #41 0x00000001051df52c in QApplication::~QApplication() at /Users/user/Qt/6.3.0_src/qtbase/src/widgets/kernel/qapplication.cpp:737
      
      #42 0x00000001051df768 in QApplication::~QApplication() at /Users/user/Qt/6.3.0_src/qtbase/src/widgets/kernel/qapplication.cpp:679
      
      #43 0x0000000104f310b0 in main at /Users/user/Desktop/imageviewer-CopyQuitCrash/main.cpp:71
      
      #44 0x0000000197731430 in start ()
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes